# opendw

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt
.github/: get-deps-mingw.ps1  get-deps-msvc.ps1
.github/workflows/: ci.yml  ubuntu_ci.yml
cmake/: FindCheck.cmake  FindSDL2.cmake
doc/: interrupts.md  interrupts.txt  keypress.txt  levels.md  monsters.txt  references.md  resource31.md  resources.md  script.md  script.txt  style.md  viewport.md
dos/: README.md  dragon  dragon.asm
script/: encounter.scr  init.cpp  init.scr  script0.scr  script01.scr  script03.scr  script06.scr  script1.scr  script11.scr  script12.scr  script13.scr  script15.scr  script18.scr  script19.scr  script22.scr  script3.scr  script71.scr
source/: Makefile  bufio.c  bufio.h  compress.c  compress.h  display.c  display.h  engine.c  engine.h  main.c  memmgr.c  memmgr.h  offsets.c  offsets.h  palette.c  player.c  player.h  resource.c  resource.h  state.c  state.h  tables.c  tables.h  ui.c  ui.h  utils.c  utils.h  vga.h  vga_null.c  vga_sdl.c  vga_xlib.c  viewport.c  viewport.h
src/: CMakeLists.txt  Makefile  README.md  compress.h  engine.h  log.c  offsets.c  player.c  ui.h  vga.h
src/fe/: CMakeLists.txt  Makefile  main.c  vga_dos.c  vga_null.c  vga_sdl.c
src/lib/: CMakeLists.txt  Makefile  bithelp.c  bithelp.h  bufio.h  compress.c  compress.h  engine.c  engine.h  mouse.c  mouse.h  offsets.c  offsets.h  player.c  player.h  resource.c  resource.h  state.c  state.h  tables.c  tables.h  timers.c  timers.h  ui.c  ui.h  utils.c  utils.h  vga.c  vga.h
src/tests/: CMakeLists.txt  test_bithelp.cpp  test_compress.cpp  test_compress.h  test_opendw.cpp  test_vga.cpp  test_vga.h
src/tools/: CMakeLists.txt  Makefile  disasm.cpp  kbhit.cpp  le16bit.cpp  monster_info.cpp  mouse.cpp  ppm.cpp  resextract.cpp  resparse.cpp  strextract.cpp
tools/: le16bit.cpp  script_ops.cpp
